Pasta para estudos do cbl putting all together

--- a/CBL Interfaces/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
+++ b/CBL Interfaces/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
@@ -73,8 +73,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sx8-Cs-h43">
-                                <rect key="frame" x="10" y="64" width="394" height="488"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sx8-Cs-h43">
+                                <rect key="frame" x="10" y="64" width="394" height="494"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WHz-Uf-7mx">
                                         <rect key="frame" x="0.0" y="0.0" width="394" height="34"/>
@@ -91,8 +91,8 @@
                                             <outletCollection property="gestureRecognizers" destination="TSH-zI-oGh" appends="YES" id="nQb-jv-fdG"/>
                                         </connections>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Kyl-eF-vQq" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
-                                        <rect key="frame" x="71" y="444" width="252" height="44"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Kyl-eF-vQq" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
+                                        <rect key="frame" x="71" y="444" width="252" height="50"/>
                                     </stackView>
                                 </subviews>
                                 <gestureRecognizers/>
