Carregando dados e dividindo as palavras

--- a/CBL PuttingAllTogether/Project39/Project39/Base.lproj/Main.storyboard
+++ b/CBL PuttingAllTogether/Project39/Project39/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="ILt-AU-x73" detailTextLabel="xJW-by-wgI" style="IBUITableViewCellStyleValue1" id="RA8-K5-cFE">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="ILt-AU-x73" detailTextLabel="xJW-by-wgI" style="IBUITableViewCellStyleValue1" id="RA8-K5-cFE">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RA8-K5-cFE" id="sUD-jy-sZE">
