--- a/CBL Make it Great/ARDicee/ARDicee/Base.lproj/Main.storyboard
+++ b/CBL Make it Great/ARDicee/ARDicee/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--ARDice-->
         <scene sceneID="tXr-a1-R10">
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="ARDicee" customModuleProvider="target" sceneMemberID="viewController">
@@ -29,7 +29,12 @@
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="GBm-yL-MkA">
+                    <navigationItem key="navigationItem" title="ARDice" id="GBm-yL-MkA">
+                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="3pi-PX-N8L">
+                            <connections>
+                                <action selector="removeAllDice:" destination="BV1-FR-VrT" id="FT6-sc-rJt"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="K55-UM-qhF">
                             <connections>
                                 <action selector="rollAgain:" destination="BV1-FR-VrT" id="Fw8-Ak-HiT"/>
