Adicionada letras no plano horizontal

--- a/CBL Make it Great/LetrandoTests/LetrandoTests/Base.lproj/Main.storyboard
+++ b/CBL Make it Great/LetrandoTests/LetrandoTests/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="cp3-ee-oxe"/>
                     <connections>
-                        <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
+                        <outlet property="sceneView" destination="BrB-h1-WRS" id="vxN-Mo-LIl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
